--- a/app/src/main/res/layout/activity_request_list.xml
+++ b/app/src/main/res/layout/activity_request_list.xml
@@ -20,8 +20,12 @@
 
     <ListView
         android:id="@+id/requestListview"
+        android:layout_marginTop="20dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#FFFFFF" />
+        android:background="#FFFFFF"
+        />
 
 </LinearLayout>
