--- a/app/src/main/res/layout/request_row.xml
+++ b/app/src/main/res/layout/request_row.xml
@@ -23,6 +23,31 @@
                 android:layout_marginRight="10dp"
                 android:paddingLeft="10dp"
                 android:gravity="left"
+                android:text="Request-ID"
+                android:textColor="#000000"
+                android:textSize="21dp" />
+
+            <TextView
+                android:id="@+id/tv0"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="10dp"
+                android:gravity="left"
+                android:text="request-ID"
+                android:textColor="#616161"
+                android:textSize="21dp" />
+        </androidx.appcompat.widget.LinearLayoutCompat>
+
+        <androidx.appcompat.widget.LinearLayoutCompat
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="10dp"
+                android:paddingLeft="10dp"
+                android:gravity="left"
                 android:text="Date"
                 android:textColor="#000000"
                 android:textSize="21dp" />
