--- a/app/src/main/res/layout/activity_forget_password.xml
+++ b/app/src/main/res/layout/activity_forget_password.xml
@@ -51,14 +51,14 @@
             android:hint="Username"
             android:inputType="textPersonName" />
 
-        <EditText
-            android:id="@+id/nicNumber"
-            android:layout_width="230dp"
-            android:layout_height="48dp"
-            android:layout_marginTop="20dp"
-            android:ems="10"
-            android:hint="NIC Number"
-            android:inputType="text" />
+<!--        <EditText-->
+<!--            android:id="@+id/nicNumber"-->
+<!--            android:layout_width="230dp"-->
+<!--            android:layout_height="48dp"-->
+<!--            android:layout_marginTop="20dp"-->
+<!--            android:ems="10"-->
+<!--            android:hint="NIC Number"-->
+<!--            android:inputType="text" />-->
 
 
 
