--- a/app/src/main/res/layout/activity_ambulance.xml
+++ b/app/src/main/res/layout/activity_ambulance.xml
@@ -220,14 +220,38 @@
                     android:layout_marginBottom="30dp"
                     android:layout_marginTop="10dp"
                     android:background="@drawable/rounded_edittext">
+
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Select from here"
+                        android:text="Your current location"
                         android:layout_weight="2"
                         android:padding="10dp"
                         android:background="@drawable/rounded_edittext">
                     </TextView>
+                    <TextView
+                        android:id="@+id/txtAddress"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textSize="17sp"
+                        android:layout_marginStart="10dp"
+                        android:text="Address"
+                        android:textColor="#1E1E1E"
+                        />
+                    <TextView
+                        android:id="@+id/txtLat"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+
+                        />
+
+                    <TextView
+                        android:id="@+id/txtLong"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+
+                        />
+
 <!--                    <MapView-->
 <!--                        xmlns:android="http://schemas.android.com/apk/res/android"-->
 <!--                        android:id="@+id/mapView"-->
