--- a/app/src/main/res/layout/activity_feedback.xml
+++ b/app/src/main/res/layout/activity_feedback.xml
@@ -31,6 +31,7 @@
 
 
             <EditText
+                android:id="@+id/feedback"
                 android:layout_width="match_parent"
                 android:layout_height="345dp"
                 android:layout_marginLeft="50dp"
