--- a/app/src/main/res/layout/activity_police_ecomplain.xml
+++ b/app/src/main/res/layout/activity_police_ecomplain.xml
@@ -12,12 +12,12 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_gravity="center"
-        android:layout_marginRight="50px"
-        android:layout_marginLeft="50px"
-        android:layout_marginTop="15px"
+        android:layout_marginRight="18dp"
+        android:layout_marginLeft="18dp"
+        android:layout_marginTop="10dp"
         android:backgroundTint="#EEE82723"
-        android:paddingTop="20px"
-        android:paddingBottom="20px"
+        android:paddingTop="15dp"
+        android:paddingBottom="15dp"
         android:background="@drawable/rounded_edittext"
         >
 
@@ -27,20 +27,22 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight=".05"
-            android:paddingLeft="100px"
+            android:paddingLeft="45dp"
             app:srcCompat="@drawable/ic_account_balance_black_24dp"
             tools:ignore="VectorDrawableCompat" />
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
             android:layout_weight="2"
             android:gravity="end"
-            android:paddingRight="100px"
             android:text="Police Emergency Service"
-            android:textAlignment="viewEnd"
-            android:layout_gravity="center_vertical"
-            android:textSize="55px"/>
+            android:textAlignment="center"
+            android:textColor="#FFFFFF"
+            android:textSize="55px"
+            android:textStyle="bold"
+            tools:ignore="RtlCompat" />
 
 
     </LinearLayout>
@@ -49,8 +51,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:layout_marginLeft="50px"
-        android:layout_marginRight="50px"
+        android:layout_marginLeft="18dp"
+        android:layout_marginRight="18dp"
         android:layout_gravity="center"
         android:background="@drawable/rounded_edittext"
 
@@ -69,23 +71,23 @@
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
                     android:layout_weight="1"
-                    android:layout_marginBottom="60px"
-                    android:layout_marginTop="10px">
+                    android:layout_marginBottom="30dp"
+                    android:layout_marginTop="10dp">
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="Your District"
                         android:layout_weight="2"
-                        android:padding="10px"
+                        android:padding="10dp"
                         android:background="@drawable/rounded_edittext">
                     </TextView>
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="vertical"
-                        android:padding="15px"
-                        android:layout_marginRight="10px"
-                        android:layout_marginLeft="10px"
+                        android:padding="10dp"
+                        android:layout_marginRight="10dp"
+                        android:layout_marginLeft="10dp"
                         android:background="@drawable/rounded_edittext"
                         android:backgroundTint="#DFDBE4">
                         <Spinner
@@ -102,23 +104,23 @@
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
                     android:layout_weight="1"
-                    android:layout_marginBottom="60px"
-                    android:layout_marginTop="10px">
+                    android:layout_marginBottom="30dp"
+                    android:layout_marginTop="10dp">
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="Nearest Police Station"
                         android:layout_weight="2"
-                        android:padding="10px"
+                        android:padding="10dp"
                         android:background="@drawable/rounded_edittext">
                     </TextView>
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="vertical"
-                        android:padding="15px"
-                        android:layout_marginRight="10px"
-                        android:layout_marginLeft="10px"
+                        android:padding="15dp"
+                        android:layout_marginRight="10dp"
+                        android:layout_marginLeft="10dp"
                         android:background="@drawable/rounded_edittext"
                         android:backgroundTint="#DFDBE4">
                         <Spinner
@@ -141,7 +143,7 @@
                         android:layout_height="wrap_content"
                         android:text="Upload Evidence"
                         android:layout_weight="18"
-                        android:padding="10px"
+                        android:padding="10dp"
                         android:background="@drawable/rounded_edittext">
                     </TextView>
 
@@ -153,7 +155,7 @@
                         android:layout_alignParentLeft="true"
                         android:layout_alignParentBottom="true"
                         android:layout_marginRight="10px"
-                        android:layout_weight=".5"
+                        android:layout_weight=".1"
                         android:onClick="uploadEvidence"
                         android:background="@drawable/ic_baseline_add_circle_24"/>
 
@@ -166,24 +168,24 @@
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
                     android:layout_weight="1"
-                    android:layout_marginBottom="60px"
-                    android:layout_marginTop="10px">
+                    android:layout_marginBottom="30dp"
+                    android:layout_marginTop="10dp">
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="Special Notes"
                         android:layout_weight="2"
-                        android:padding="10px"
+                        android:padding="10dp"
                         android:background="@drawable/rounded_edittext">
                     </TextView>
                     <EditText
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginBottom="60px"
-                        android:layout_marginTop="10px"
-                        android:layout_marginRight="10px"
-                        android:layout_marginLeft="10px"
-                        android:padding="50px"
+                        android:layout_marginBottom="18dp"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginRight="10dp"
+                        android:layout_marginLeft="10dp"
+                        android:padding="10dp"
                         android:background="@drawable/rounded_edittext"
                         android:backgroundTint="#DFDBE4">
 
@@ -196,22 +198,27 @@
                     android:orientation="horizontal"
                     android:layout_marginBottom="30dp"
                     android:layout_marginTop="10dp">
+
                     <Button
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Request the Ambulance"
-                        android:padding="10dp"
+                        android:layout_marginRight="10dp"
                         android:background="@drawable/rounded_edittext"
                         android:backgroundTint="#EEE82723"
-                        android:layout_marginRight="10dp"
-                        ></Button>
+                        android:padding="10dp"
+                        android:text="Request police support"
+                        android:textColor="#FFFFFF"
+                        android:textStyle="bold" />
+
                     <Button
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Cancel"
                         android:background="@drawable/rounded_edittext"
                         android:backgroundTint="#EEE82723"
-                        android:onClick="cancecl_req">
+                        android:onClick="cancecl_req"
+                        android:text="Cancel"
+                        android:textColor="#FFFFFF"
+                        android:textStyle="bold">
 
                     </Button>
                 </LinearLayout>
