added_pop4Window

--- a/app/src/main/res/layout/activity_first_aid_instruction.xml
+++ b/app/src/main/res/layout/activity_first_aid_instruction.xml
@@ -124,7 +124,8 @@
                 android:layout_marginBottom="20dp"
                 android:background="@drawable/btn_firstaid_instructions"
                 android:text="Blisters"
-                android:textSize="18sp">
+                android:textSize="18sp"
+                android:onClick="btn5">
 
             </Button>
 
