--- a/app/src/main/res/layout/activity_emergency_numbers_cate.xml
+++ b/app/src/main/res/layout/activity_emergency_numbers_cate.xml
@@ -40,13 +40,12 @@
             android:layout_gravity="center_vertical"
             android:layout_weight="2"
             android:gravity="end"
-            android:padding="10px"
-            android:paddingRight="100px"
+            android:paddingRight="15dp"
             android:text="Emergency Service Numbers"
             android:textAlignment="viewEnd"
             android:textColor="#FCFCFD"
             android:textSize="55px"
-            android:textStyle="bold"></TextView>
+            android:textStyle="bold"/>
 
 
 
@@ -63,13 +62,13 @@
         android:layout_gravity="center"
         android:layout_marginTop="65dp"
         android:layout_marginBottom="55dp"
-        android:columnCount="2"
-        android:rowCount="2">
+        android:columnCount="1"
+        android:rowCount="4">
 
         <Button
 
-            android:layout_width="152dp"
-            android:layout_height="137dp"
+            android:layout_width="220dp"
+            android:layout_height="60dp"
             android:layout_gravity="center"
             android:layout_marginLeft="50px"
             android:layout_marginTop="15px"
@@ -78,11 +77,11 @@
             android:layout_weight="1.5"
             android:background="@drawable/rounded_edittext"
             android:backgroundTint="#29A536"
-            android:drawableTop="@drawable/ic_local_hospital_black_24dp"
-            android:gravity="bottom|center_horizontal"
+            android:drawableLeft="@drawable/ic_local_hospital_black_24dp"
             android:onClick="helath_click"
-            android:paddingTop="10dp"
-            android:paddingBottom="25dp"
+            android:paddingTop="15dp"
+            android:paddingBottom="15dp"
+            android:paddingLeft="25dp"
             android:text="Health"
             android:textColor="#FFFFFF"
             android:textSize="16dp"
@@ -91,8 +90,8 @@
             />
 
         <Button
-            android:layout_width="144dp"
-            android:layout_height="133dp"
+            android:layout_width="220dp"
+            android:layout_height="60dp"
             android:layout_gravity="center"
             android:layout_marginLeft="50px"
             android:layout_marginTop="15px"
@@ -101,10 +100,10 @@
             android:layout_weight="1.5"
             android:background="@drawable/rounded_edittext"
             android:backgroundTint="#F1110C"
-            android:drawableTop="@drawable/ic_account_balance_black_24dp"
-            android:gravity="bottom|center_horizontal"
-            android:paddingTop="10dp"
-            android:paddingBottom="25dp"
+            android:drawableLeft="@drawable/ic_account_balance_black_24dp"
+            android:paddingTop="15dp"
+            android:paddingBottom="15dp"
+            android:paddingLeft="25dp"
             android:text="Police"
             android:textColor="#FFFFFF"
             android:textSize="16dp"
@@ -113,20 +112,20 @@
 
         <Button
 
-            android:layout_width="144dp"
-            android:layout_height="133dp"
+            android:layout_width="220dp"
+            android:layout_height="60dp"
             android:layout_gravity="center"
             android:layout_marginLeft="50px"
-            android:layout_marginTop="55px"
+            android:layout_marginTop="15px"
             android:layout_marginRight="50px"
             android:layout_marginBottom="15px"
             android:layout_weight="1.5"
             android:background="@drawable/rounded_edittext"
-            android:backgroundTint="#D1522A"
-            android:drawableTop="@drawable/ic_baseline_fireplace_24"
-            android:gravity="bottom|center_horizontal"
-            android:paddingTop="10dp"
-            android:paddingBottom="25dp"
+            android:backgroundTint="#FF5722"
+            android:drawableLeft="@drawable/ic_baseline_fireplace_24"
+            android:paddingTop="15dp"
+            android:paddingBottom="15dp"
+            android:paddingLeft="25dp"
             android:text="Fire Brigade"
             android:textColor="#FFFFFF"
             android:textSize="16dp"
@@ -136,20 +135,20 @@
 
         <Button
 
-            android:layout_width="144dp"
-            android:layout_height="133dp"
+            android:layout_width="220dp"
+            android:layout_height="60dp"
             android:layout_gravity="center"
             android:layout_marginLeft="50px"
-            android:layout_marginTop="55px"
+            android:layout_marginTop="15px"
             android:layout_marginRight="50px"
             android:layout_marginBottom="15px"
             android:layout_weight="1.5"
             android:background="@drawable/rounded_edittext"
-            android:backgroundTint="#8F7608"
-            android:drawableTop="@drawable/ic_baseline_emoji_objects_24"
-            android:gravity="bottom|center_horizontal"
-            android:paddingTop="10dp"
-            android:paddingBottom="25dp"
+            android:backgroundTint="#EABF01"
+            android:drawableLeft="@drawable/ic_baseline_emoji_objects_24"
+            android:paddingTop="15dp"
+            android:paddingBottom="15dp"
+            android:paddingLeft="25dp"
             android:text="Others"
             android:textColor="#FFFFFF"
             android:textSize="16dp"
