--- a/app/src/main/res/layout/activity_emergency_numbers_fire.xml
+++ b/app/src/main/res/layout/activity_emergency_numbers_fire.xml
@@ -17,7 +17,7 @@
         android:layout_marginLeft="50px"
         android:layout_marginTop="15px"
         android:layout_marginBottom="15px"
-        android:backgroundTint="#D1522A"
+        android:backgroundTint="#FF5722"
         android:paddingTop="20px"
         android:paddingBottom="20px"
         android:background="@drawable/rounded_edittext"
