--- a/app/src/main/res/layout/activity_emergency_numbers_others.xml
+++ b/app/src/main/res/layout/activity_emergency_numbers_others.xml
@@ -17,7 +17,7 @@
         android:layout_marginLeft="50px"
         android:layout_marginTop="15px"
         android:layout_marginBottom="15px"
-        android:backgroundTint="#8F7608"
+        android:backgroundTint="#EABF01"
         android:paddingTop="20px"
         android:paddingBottom="20px"
         android:background="@drawable/rounded_edittext"
