--- a/app/src/main/res/layout/activity_police_ecomplain.xml
+++ b/app/src/main/res/layout/activity_police_ecomplain.xml
@@ -232,6 +232,58 @@
 
                     </EditText>
                 </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:layout_marginBottom="30dp"
+                    android:layout_marginTop="10dp"
+                    android:background="@drawable/rounded_edittext">
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Your current location"
+                        android:layout_weight="2"
+                        android:padding="10dp"
+                        android:background="@drawable/rounded_edittext">
+                    </TextView>
+                    <TextView
+                        android:id="@+id/txtAddress"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textSize="17sp"
+                        android:layout_marginStart="10dp"
+                        android:text="Address"
+                        android:textColor="#1E1E1E"
+                        />
+                    <TextView
+                        android:id="@+id/txtLat"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+
+                        />
+
+                    <TextView
+                        android:id="@+id/txtLong"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+
+                        />
+
+                    <!--                    <MapView-->
+                    <!--                        xmlns:android="http://schemas.android.com/apk/res/android"-->
+                    <!--                        android:id="@+id/mapView"-->
+                    <!--                        android:layout_width="match_parent"-->
+                    <!--                        android:layout_height="match_parent"-->
+                    <!--                        android:clickable="true"-->
+                    <!--                        android:layout_weight="5"-->
+                    <!--                        android:backgroundTint="#00000000"-->
+                    <!--                        tools:ignore="MissingClass"-->
+                    <!--                        android:background="@drawable/rounded_edittext"></MapView>-->
+                </LinearLayout>
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
