--- a/app/src/main/res/layout/pop5_window.xml
+++ b/app/src/main/res/layout/pop5_window.xml
@@ -5,4 +5,10 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+    <ListView
+        android:id="@+id/lv"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#FFFFFF" />
+
 </androidx.appcompat.widget.LinearLayoutCompat>
