--- a/app/src/main/res/layout/activity_first_aid_instruction.xml
+++ b/app/src/main/res/layout/activity_first_aid_instruction.xml
@@ -137,7 +137,8 @@
                 android:layout_marginBottom="20dp"
                 android:background="@drawable/btn_firstaid_instructions"
                 android:text="Sprains"
-                android:textSize="18sp">
+                android:textSize="18sp"
+                android:onClick="btn6">
 
             </Button>
 
