--- a/app/src/main/res/layout/activity_first_aid_instruction.xml
+++ b/app/src/main/res/layout/activity_first_aid_instruction.xml
@@ -155,6 +155,18 @@
 
             </Button>
 
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="30dp"
+                android:layout_marginRight="30dp"
+                android:layout_marginBottom="20dp"
+                android:background="@drawable/btn_firstaid_instructions"
+                android:text="Toothaches"
+                android:textSize="18sp">
+
+            </Button>
+
 
         </LinearLayout>
 
