--- a/app/src/main/res/layout/activity_first_aid_instruction.xml
+++ b/app/src/main/res/layout/activity_first_aid_instruction.xml
@@ -163,7 +163,8 @@
                 android:layout_marginBottom="20dp"
                 android:background="@drawable/btn_firstaid_instructions"
                 android:text="Toothaches"
-                android:textSize="18sp">
+                android:textSize="18sp"
+                android:onClick="btn8">
 
             </Button>
 
