--- a/app/src/main/res/layout/activity_add_relations.xml
+++ b/app/src/main/res/layout/activity_add_relations.xml
@@ -16,7 +16,8 @@
         android:layout_weight="5"
         android:background="@drawable/button_background"
         android:text="Relations"
-        android:textSize="30sp"/>
+        android:textColor="#FFFFFF"
+        android:textSize="25dp"/>
 
 
     <ScrollView
@@ -37,12 +38,12 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="25dp"
                 android:text="Relation's Name"
-                android:layout_marginLeft="50dp"
-                android:layout_marginRight="50dp"
-                android:layout_marginTop="20dp"
-                android:gravity="center"
+                android:textSize="20sp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:textColor="#455A64"
+                android:layout_marginTop="30dp"
                 android:backgroundTint="#838087"
                 >
 
@@ -53,18 +54,18 @@
                 android:id="@+id/r1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="20dp"
                 android:ems="10"
                 android:hint="Relation's Name"
-                android:layout_marginLeft="50dp"
-                android:layout_marginRight="50dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:textSize="20dp"
                 android:paddingTop="10dp"
                 android:paddingBottom="10dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="10dp"
                 android:gravity="center"
                 android:backgroundTint="#E6E2EC"
-                android:background="@drawable/rounded_edittext"
+                android:background="@drawable/edit_text"
                 >
 
             </EditText>
@@ -73,12 +74,11 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="25dp"
                 android:text="Relation's Number"
-                android:layout_marginLeft="50dp"
-                android:layout_marginRight="50dp"
-                android:layout_marginTop="20dp"
-                android:gravity="center"
+                android:textSize="20sp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginTop="30dp"
                 android:backgroundTint="#838087"
                 >
 
@@ -89,11 +89,11 @@
                 android:id="@+id/r1_num"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="20dp"
                 android:ems="10"
                 android:hint="Relation's Number"
-                android:layout_marginLeft="50dp"
-                android:layout_marginRight="50dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:textSize="20dp"
                 android:paddingTop="10dp"
                 android:paddingBottom="10dp"
                 android:layout_marginTop="10dp"
@@ -117,11 +117,11 @@
                 android:layout_marginRight="80dp"
                 android:layout_marginBottom="40dp"
                 android:layout_marginTop="50dp"
-                android:backgroundTint="#46C7C7"
-                android:background="@drawable/btn_req_backgrnd"
-                android:text="Save Relations"
+                android:background="@drawable/bottom_btn"
+                android:text="Save"
                 android:onClick="addRelation"
-                android:textSize="24sp"/>
+                android:textColor="#FFFFFF"
+                android:textSize="18sp"/>
 
 
 
