--- a/app/src/main/res/drawable/btn_req_backgrnd.xml
+++ b/app/src/main/res/drawable/btn_req_backgrnd.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle" >
     <corners
-        android:radius="14dp"
+        android:radius="16dp"
         />
     <solid
-        android:color="#E0E0E0"
+        android:color="#EFEBE9"
         />
     <padding
-        android:left="0dp"
-        android:top="0dp"
-        android:right="0dp"
-        android:bottom="0dp"
+        android:left="25dp"
+        android:top="5dp"
+        android:right="20dp"
+        android:bottom="5dp"
         />
     <size
         android:width="270dp"
@@ -18,6 +18,6 @@
         />
     <stroke
         android:width="3dp"
-        android:color="#878787"
+        android:color="#6D4C41"
         />
 </shape>
