--- a/app/src/main/res/layout/activity_add_relations.xml
+++ b/app/src/main/res/layout/activity_add_relations.xml
@@ -7,17 +7,6 @@
     android:orientation="vertical"
     tools:context=".addRelations">
 
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="50dp"
-        android:layout_marginTop="40dp"
-        android:layout_marginRight="50dp"
-        android:layout_weight="5"
-        android:background="@drawable/button_background"
-        android:text="Relations"
-        android:textColor="#FFFFFF"
-        android:textSize="25dp"/>
 
 
     <ScrollView
@@ -31,9 +20,29 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:layout_marginTop="40dp"
+            android:layout_marginTop="10dp"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp">
+
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="50dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginRight="50dp"
+                android:layout_weight="5"
+                android:background="@drawable/button_background"
+                android:text="Relations"
+                android:textColor="#FFFFFF"
+                android:textSize="25dp"/>
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="170dp"
+                app:srcCompat="@drawable/ic_baseline_supervisor_account_24"
+                tools:ignore="VectorDrawableCompat">
+
+            </ImageView>
 
             <TextView
                 android:layout_width="match_parent"
@@ -43,7 +52,7 @@
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp"
                 android:textColor="#455A64"
-                android:layout_marginTop="30dp"
+                android:layout_marginTop="20dp"
                 android:backgroundTint="#838087"
                 >
 
@@ -78,7 +87,7 @@
                 android:textSize="20sp"
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp"
-                android:layout_marginTop="30dp"
+                android:layout_marginTop="20dp"
                 android:backgroundTint="#838087"
                 >
 
@@ -100,12 +109,10 @@
                 android:layout_marginBottom="10dp"
                 android:gravity="center"
                 android:backgroundTint="#E6E2EC"
-                android:background="@drawable/rounded_edittext"
+                android:background="@drawable/edit_text"
                 >
 
             </EditText>
-
-
 
 
 
@@ -116,7 +123,7 @@
                 android:layout_marginLeft="80dp"
                 android:layout_marginRight="80dp"
                 android:layout_marginBottom="40dp"
-                android:layout_marginTop="50dp"
+                android:layout_marginTop="20dp"
                 android:background="@drawable/bottom_btn"
                 android:text="Save"
                 android:onClick="addRelation"
