--- a/app/src/main/res/layout/activity_popup_load.xml
+++ b/app/src/main/res/layout/activity_popup_load.xml
@@ -18,6 +18,7 @@
     <!--        />-->
 
     <TextView
+        android:id="@+id/statuspop"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAlignment="center"
@@ -40,5 +41,11 @@
         android:layout_marginBottom="50dp"
         android:background="@drawable/rounded_edittext"
         />
+    <Button
+        android:id="@+id/loadbtn1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="okey"
+        ></Button>
 
 </androidx.appcompat.widget.LinearLayoutCompat>
