--- a/app/src/main/res/drawable/btn_firstaid_instructions.xml
+++ b/app/src/main/res/drawable/btn_firstaid_instructions.xml
@@ -18,6 +18,6 @@
         />
     <stroke
         android:width="3dp"
-        android:color="#B0BEC5"
+        android:color="#69F0AE"
         />
 </shape>
