Added the sending relation massage to loading pop up

--- a/app/src/main/res/layout/activity_popup_load.xml
+++ b/app/src/main/res/layout/activity_popup_load.xml
@@ -23,7 +23,7 @@
         android:layout_height="wrap_content"
         android:textAlignment="center"
         android:text="Process"
-        android:textSize="35dp"
+        android:textSize="25dp"
         android:layout_marginBottom="25dp"
         >
 
@@ -38,6 +38,7 @@
         android:layout_marginLeft="50dp"
         android:layout_marginRight="50dp"
         android:textAlignment="center"
+        android:paddingBottom="100dp"
         android:layout_marginBottom="50dp"
         android:background="@drawable/rounded_edittext"
         />
