set reply in requestview

--- a/app/src/main/res/layout/activity_request_2.xml
+++ b/app/src/main/res/layout/activity_request_2.xml
@@ -153,6 +153,27 @@
                 android:padding="08dp"
                 android:textSize="20dp"/>
 
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Reply"
+                android:layout_marginLeft="50dp"
+                android:layout_marginTop="20dp"
+                android:textSize="20dp"/>
+
+            <TextView
+                android:id="@+id/reply"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@drawable/edit_text"
+                android:layout_marginTop="20dp"
+                android:layout_marginLeft="50dp"
+                android:layout_marginRight="50dp"
+                android:layout_marginBottom="20dp"
+                android:gravity="center"
+                android:padding="08dp"
+                android:textSize="20dp"/>
+
 
             <Button
                 android:layout_width="match_parent"
